# clutter-rs

./: CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
src/: actorbox.rs  color.rs  event.rs  event_button.rs  event_crossing.rs  event_key.rs  event_motion.rs  event_scroll.rs  event_touch.rs  knot.rs  lib.rs  macros.rs  margin.rs  matrix.rs  pathnode.rs  perspective.rs  point.rs  prelude.rs  rect.rs  rt.rs  vertex.rs
src/auto/: action.rs  actor.rs  actor_box.rs  actor_meta.rs  align_constraint.rs  alpha.rs  animatable.rs  animation.rs  animator.rs  backend.rs  behaviour.rs  behaviour_depth.rs  behaviour_ellipse.rs  behaviour_opacity.rs  behaviour_path.rs  behaviour_rotate.rs  behaviour_scale.rs  bin_layout.rs  bind_constraint.rs  binding_pool.rs  blur_effect.rs  box_.rs  box_layout.rs  brightness_contrast_effect.rs  cairo_texture.rs  canvas.rs  child_meta.rs  click_action.rs  clip_node.rs  clone.rs  color.rs  color_node.rs  colorize_effect.rs  constraint.rs  container.rs  content.rs  deform_effect.rs  desaturate_effect.rs  device_manager.rs  drag_action.rs  (+70 more)
sys/: CONTRIBUTORS.md  Cargo.toml  README.md
sys/src/: lib.rs
sys/tests/: abi.rs
