[package]
name = "clutter-rs"
version = "0.1.0"
authors = ["Victor Dudochkin <dudochkin.victor@gmail.com>"]
readme = "README.md"
homepage = "https://angular-rust.github.io/clutter-rs"
repository = "https://github.com/angular-rust/clutter-rs"
documentation = "https://docs.rs/clutter-rs"
description = "Rust bindings for the Clutter library"
keywords = ["clutter", "gtk", "gtk-rs", "gnome", "gui"]
categories = ["multimedia", "gui"]
license = "MIT"
edition = "2018"

[lib]
name = "clutter"

[features]
dox = ["ffi/dox"]

[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
libc = "0.2"
bitflags = "1.0"

atk = "0.9"
glib-sys = "0.10"
gdk-sys = "0.10"
gio-sys = "0.10"
gobject-sys = "0.10"
cairo-sys-rs = "0.10"
cairo-rs = "0.9"
gdk-pixbuf = "0.9"
gio = "0.9"
glib = "0.10"
pango = "0.9"

cogl-rs = "0.1"
ffi = { package = "clutter-sys-rs", version="0.1", path = "sys" }
# json-sys = { path = "../json-sys" }

[dev-dependencies]
gir-format-check = "^0.1"