[package]
name = "clutter-rs"
version = "0.1.2"
authors = ["Victor Dudochkin <dudochkin.victor@gmail.com>"]
readme = "README.md"
homepage = "https://angular-rust.github.io/clutter-rs"
repository = "https://github.com/angular-rust/clutter-rs"
documentation = "https://docs.rs/clutter-rs"
description = "Rust bindings for the Clutter library"
keywords = ["clutter", "gtk", "gtk-rs", "gnome", "gui"]
categories = ["multimedia", "gui"]
license = "MIT"
edition = "2018"

[lib]
name = "clutter"

[package.metadata.docs.rs]
features = ["dox"]

[features]
dox = ["ffi/dox", "glib/dox", "glib-sys/dox", "gobject-sys/dox", "cogl-rs/dox"]

[dependencies]
libc = "0.2"
bitflags = "1.0"

glib-sys = "0.10"
gdk-sys = "0.10"
gio-sys = "0.10"
gobject-sys = "0.10"
cairo-sys-rs = "0.10"

png = "0.16"
atk = { version = "0.9", features = ["v2_34"] }
cairo-rs = { version = "0.9", features = ["png"] }
gdk-pixbuf = { version = "0.9", features = ["v2_40"] }
gio = { version = "0.9", features = ["v2_58"] }
glib = { version="0.10", features = ["v2_58"] }
pango = { version = "0.9", features = ["v1_42"] }

cogl-rs = "0.1.4"
ffi = { package = "clutter-sys-rs", version="0.1.2", path = "sys" }
# json-sys = { path = "../json-sys" }

[dev-dependencies]
