[package]
name = "clutter-sys-rs"
version = "0.1.0"
authors = ["Victor Dudochkin <dudochkin.victor@gmail.com>"]
links = "\"clutter-1.0\""
build = "build.rs"
edition = "2018"

[package.metadata.system-deps.clutter_1_0]
name = "clutter-1.0"
version = "1.26"

[lib]
name = "clutter_sys"

[dependencies]
libc = "0.2"

[dependencies.cogl-sys-rs]
version = "0.1"
path = "../../cogl-rs/sys"

# [dependencies.json-sys]
# path = "../json-sys"

[dependencies.atk-sys]
version = "0.10"

[dependencies.glib-sys]
version = "0.10"

[dependencies.gobject-sys]
version = "0.10"

[dependencies.gio-sys]
version = "0.10"

[dependencies.pango-sys]
version = "0.10"

[dependencies.cairo-sys-rs]
version = "0.10"

[build-dependencies]
system-deps = "1.3"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"