[package]
name = "clutter-sys-rs"
version = "0.1.2"
authors = ["Victor Dudochkin <dudochkin.victor@gmail.com>"]
readme = "README.md"
homepage = "https://angular-rust.github.io/clutter-rs"
repository = "https://github.com/angular-rust/clutter-rs"
documentation = "https://docs.rs/clutter-sys-rs"
description = "FFI bindings for the Clutter library"
keywords = ["clutter", "gtk", "gtk-rs", "gnome", "gui"]
categories = ["multimedia", "gui"]
license = "MIT"
edition = "2018"

links = "\"clutter-1.0\""
build = "build.rs"

[package.metadata.system-deps.clutter_1_0]
name = "clutter-1.0"
version = "1.26"

[package.metadata.docs.rs]
features = ["dox"]

[features]
dox = ["cogl-sys-rs/dox", "atk-sys/dox", "glib-sys/dox", "gobject-sys/dox", "gio-sys/dox", "pango-sys/dox", "cairo-sys-rs/dox"]

[lib]
name = "clutter_sys"

[dependencies]
libc = "0.2"

[dependencies.cogl-sys-rs]
version = "0.1.4"

# [dependencies.json-sys]
# path = "../json-sys"

[dependencies.atk-sys]
version = "0.10"

[dependencies.glib-sys]
version = "0.10"

[dependencies.gobject-sys]
version = "0.10"

[dependencies.gio-sys]
version = "0.10"

[dependencies.pango-sys]
version = "0.10"

[dependencies.cairo-sys-rs]
version = "0.10"

[build-dependencies]
system-deps = "1.3"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"